// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHistory.vue should be rendered correctly 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <search-input-stub
      autofocus="true"
      class="history--search"
      placeholder="Filter by Address, Symbol, Type or Block ID"
      value=""
    />
     
    <div
      class="history-items"
    >
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnVFi...P2nse
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Swap"
          >
            Swap
          </div>
           
          <div
            class="history-item-title p4"
          >
            Failed to swap ******  for ****** 
          </div>
           
          <s-icon-stub
            class="info-status info-status--error"
            name="basic-clear-X-xs-24"
          />
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="AddLiquidity"
          >
            Add Liquidity
          </div>
           
          <div
            class="history-item-title p4"
          >
            Supplied ******  and ****** 
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="RemoveLiquidity"
          >
            Remove Liquidity
          </div>
           
          <div
            class="history-item-title p4"
          >
            Removed ******  and ****** 
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
    </div>
     
    <s-pagination-stub
      borderradius="small"
      currentpage="1"
      layout="slot"
      nexttext=""
      oftext="of"
      pagesize="8"
      pagesizes="10,20,30,40,50,100"
      perpagetext="Rows per page"
      popperclass=""
      prevtext=""
      totaltext="1-8 of 9"
    >
      <span
        class="el-pagination__total"
      >
        1-8 of 9
      </span>
       
      <s-button-stub
        borderradius="small"
        disabled="true"
        icon=""
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip="First"
        tooltipplacement="top"
        type="link"
        usedesignsystem="true"
      >
        <s-icon-stub
          name="chevrons-left-16"
          size="14"
        />
      </s-button-stub>
       
      <s-button-stub
        borderradius="small"
        disabled="true"
        icon=""
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip="Previous"
        tooltipplacement="top"
        type="link"
        usedesignsystem="true"
      >
        <s-icon-stub
          name="chevron-left-16"
          size="14"
        />
      </s-button-stub>
       
      <s-button-stub
        borderradius="small"
        icon=""
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip="Next"
        tooltipplacement="top"
        type="link"
        usedesignsystem="true"
      >
        <s-icon-stub
          name="chevron-right-16"
          size="14"
        />
      </s-button-stub>
       
      <s-button-stub
        borderradius="small"
        icon=""
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip="Last"
        tooltipplacement="top"
        type="link"
        usedesignsystem="true"
      >
        <s-icon-stub
          name="chevrons-right-16"
          size="14"
        />
      </s-button-stub>
    </s-pagination-stub>
  </s-form-stub>
</div>
`;

exports[`WalletHistory.vue should render error icon when transaction is failed 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <search-input-stub
      autofocus="true"
      class="history--search"
      placeholder="Filter by Address, Symbol, Type or Block ID"
      value=""
    />
     
    <div
      class="history-items"
    >
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Failed to send ******  to cnVFi...P2nse
          </div>
           
          <s-icon-stub
            class="info-status info-status--error"
            name="basic-clear-X-xs-24"
          />
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
    </div>
     
    <!---->
  </s-form-stub>
</div>
`;

exports[`WalletHistory.vue should render history empty text when no transacion 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <!---->
     
    <div
      class="history-items"
    >
      <div
        class="history-empty p4"
      >
        Your transactions will appear here
      </div>
    </div>
     
    <!---->
  </s-form-stub>
</div>
`;

exports[`WalletHistory.vue should render spinner when transaction is pending 1`] = `
<div
  class="history s-flex"
>
  <s-form-stub
    class="history-form"
    labelposition="right"
    validateonrulechange="true"
  >
    <search-input-stub
      autofocus="true"
      class="history--search"
      placeholder="Filter by Address, Symbol, Type or Block ID"
      value=""
    />
     
    <div
      class="history-items"
    >
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnW4q...L2ftG
          </div>
           
          <!---->
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
      <div
        class="history-item s-flex"
      >
        <div
          class="history-item-info"
        >
          <div
            class="history-item-operation ch3"
            data-type="Transfer"
          >
            Transfer
          </div>
           
          <div
            class="history-item-title p4"
          >
            Sent ******  To cnVFi...P2nse
          </div>
           
          <s-icon-stub
            class="info-status info-status--loading"
            name="refresh-16"
          />
        </div>
         
        <div
          class="history-item-date"
        >
          Nov 27, 2020 11:59:59 PM
        </div>
      </div>
    </div>
     
    <!---->
  </s-form-stub>
</div>
`;
